--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" 
+     type="image/png" 
+     href="https://images.pexels.com/photos/8969237/pexels-photo-8969237.jpeg?auto=compress&cs=tinysrgb&w=600">
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>React App</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+  
+    <title>Eat Healthy & Stay Good</title>
 
       <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
@@ -21,7 +24,7 @@
       // MIT License
       // https://github.com/rafgraph/spa-github-pages
       // This script checks to see if a redirect is present in the query string,
-      // converts it back into the correct url and adds it to the
+      // converts it back into the correct url and adds it to thefire
       // browser's history using window.history.replaceState(...),
       // which won't cause the browser to attempt to load the new url.
       // When the single page app is loaded further down in this file,
